fix(avo-2142): fix time input field styling on firefox
https://meemoo.atlassian.net/browse/AVO-2142

--- a/src/components/DatePicker/DatePicker.scss
+++ b/src/components/DatePicker/DatePicker.scss
@@ -34,6 +34,7 @@
 			border-left: 0;
 			border-radius: 0 4px 4px 0;
 			min-width: 7rem;
+			white-space: initial;
 		}
 	}
 }
